Add original results

--- a/notebooks/figure_1.ipynb
+++ b/notebooks/figure_1.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "from data import get_sbm\n",
     "from utils import get_results_path\n",
-    "from visualization import get_box_plot_coords"
+    "from visualization import get_box_plot_coords\n"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "print(\"Running on device: {}\".format(device))"
+    "print(\"Running on device: {}\".format(device))\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "centers = torch.eye(num_classes)\n",
     "num_nodes_per_class = 100\n",
     "num_nodes = num_nodes_per_class * num_classes\n",
-    "block_sizes = torch.tensor([num_nodes_per_class] * num_classes)"
+    "block_sizes = torch.tensor([num_nodes_per_class] * num_classes)\n"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GNNs = [(\"MLP\", MLP), (\"GCN\", partial(GCN, add_self_loops=False))]"
+    "GNNs = [(\"MLP\", MLP), (\"GCN\", partial(GCN, add_self_loops=False))]\n"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame()"
+    "df = pd.DataFrame()\n"
    ]
   },
   {
@@ -203,13 +203,10 @@
     "                                    \"num_layers\": num_layers,\n",
     "                                    \"self_loops\": self_loops,\n",
     "                                    \"run\": i,\n",
-    "                                    \"epoch\": epoch,\n",
     "                                    \"train_loss\": loss.item(),\n",
     "                                    \"train_acc\": train_acc,\n",
     "                                    \"test_acc\": test_acc,\n",
     "                                    \"time\": time.time() - start_time,\n",
-    "                                    \"avg_degree\": orig_data.num_edges\n",
-    "                                    / orig_data.num_nodes,\n",
     "                                },\n",
     "                                index=[0],\n",
     "                            ),\n",
@@ -217,7 +214,7 @@
     "                        ignore_index=True,\n",
     "                    )\n",
     "\n",
-    "    df.to_csv(get_results_path() / \"synthetic.csv\")"
+    "    df.to_csv(get_results_path() / \"synthetic.csv\")\n"
    ]
   },
   {
@@ -320,7 +317,7 @@
     "    else:\n",
     "        ax.set_xlabel(\"\")\n",
     "\n",
-    "plt.savefig(get_results_path() / \"synthetic.pdf\", bbox_inches=\"tight\")"
+    "plt.savefig(get_results_path() / \"synthetic.pdf\", bbox_inches=\"tight\")\n"
    ]
   }
  ],
