--- a/notebooks/figure_2.ipynb
+++ b/notebooks/figure_2.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "from data import iterate_datasets\n",
     "from utils import get_results_path\n",
-    "from visualization import get_box_plot_coords"
+    "from visualization import get_box_plot_coords\n"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "print(\"Running on device: {}\".format(device))"
+    "print(\"Running on device: {}\".format(device))\n"
    ]
   },
   {
@@ -56,7 +56,7 @@
     "hidden_channels = 64\n",
     "runs = 50\n",
     "max_num_layers = 4\n",
-    "dropout = 0.2"
+    "dropout = 0.2\n"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GNNs = [(\"MLP\", MLP), (\"GCN\", partial(GCN, add_self_loops=False))]"
+    "GNNs = [(\"MLP\", MLP), (\"GCN\", partial(GCN, add_self_loops=False))]\n"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame()"
+    "df = pd.DataFrame()\n"
    ]
   },
   {
@@ -179,13 +179,10 @@
     "                                    \"num_layers\": num_layers,\n",
     "                                    \"self_loops\": self_loops,\n",
     "                                    \"run\": i,\n",
-    "                                    \"epoch\": epoch,\n",
     "                                    \"train_loss\": loss.item(),\n",
     "                                    \"train_acc\": train_acc,\n",
     "                                    \"test_acc\": test_acc,\n",
     "                                    \"time\": end_time - start_time,\n",
-    "                                    \"avg_degree\": data.num_edges\n",
-    "                                    / data.num_nodes,\n",
     "                                },\n",
     "                                index=[0],\n",
     "                            ),\n",
@@ -193,7 +190,7 @@
     "                        ignore_index=True,\n",
     "                    )\n",
     "\n",
-    "    df.to_csv(get_results_path() / \"GCN.csv\")"
+    "    df.to_csv(get_results_path() / \"real.csv\")\n"
    ]
   },
   {
@@ -234,7 +231,7 @@
     "    \"dataset\"\n",
     "].unique()\n",
     "print(\"Removing datasets: {}\".format(names_to_remove))\n",
-    "df = df[~df[\"dataset\"].isin(names_to_remove)]"
+    "df = df[~df[\"dataset\"].isin(names_to_remove)]\n"
    ]
   },
   {
@@ -307,7 +304,7 @@
     "        ax.set_xlabel(\"\")\n",
     "    ax.legend().remove()\n",
     "\n",
-    "plt.savefig(get_results_path() / \"GCN.pdf\", bbox_inches=\"tight\")"
+    "plt.savefig(get_results_path() / \"real.pdf\", bbox_inches=\"tight\")\n"
    ]
   }
  ],
