--- a/notebooks/table_1_and_2.ipynb
+++ b/notebooks/table_1_and_2.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "from data import get_sbm\n",
     "from stats import compute_statistics\n",
-    "from utils import get_results_path"
+    "from utils import get_results_path\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
     "num_classes = 10\n",
     "num_nodes_per_class = 100\n",
     "num_nodes = num_nodes_per_class * num_classes\n",
-    "block_sizes = torch.tensor([num_nodes_per_class] * num_classes)"
+    "block_sizes = torch.tensor([num_nodes_per_class] * num_classes)\n"
    ]
   },
   {
@@ -38,11 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats_path = get_results_path() / \"statistics.csv\"\n",
-    "if stats_path.exists():\n",
-    "    df = pd.read_csv(stats_path, index_col=[0, 1])\n",
-    "else:\n",
-    "    df = pd.DataFrame()"
+    "stats_path = get_results_path() / \"statistics_synthetic.csv\"\n",
+    "df = pd.DataFrame()\n"
    ]
   },
   {
@@ -60,9 +57,6 @@
     "    (1, 9),\n",
     "]:\n",
     "    name = f\"p_ii={edge_num_self}/100, p_ij={edge_num_other}/100\"\n",
-    "\n",
-    "    if name in df.index.unique(level=0):\n",
-    "        continue\n",
     "\n",
     "    prob_matrix = torch.full(\n",
     "        (num_classes, num_classes),\n",
@@ -87,7 +81,7 @@
     "    A = to_scipy_sparse_matrix(data.edge_index)\n",
     "\n",
     "    df = compute_statistics(A, name, df)\n",
-    "    df.to_csv(stats_path)"
+    "    df.to_csv(stats_path)\n"
    ]
   },
   {
@@ -246,7 +240,7 @@
     }
    ],
    "source": [
-    "df[[\"1_mean\", \"1_std\", \"1_expected\", \"2_mean\", \"2_std\", \"2_expected\"]]"
+    "df[[\"1_mean\", \"1_std\", \"1_expected\", \"2_mean\", \"2_std\", \"2_expected\"]]\n"
    ]
   },
   {
@@ -436,7 +430,7 @@
     "        \"6_mean\",\n",
     "        \"6_std\",\n",
     "    ]\n",
-    "]"
+    "]\n"
    ]
   }
  ],
