--- a/notebooks/table_3.ipynb
+++ b/notebooks/table_3.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "from data import iterate_datasets\n",
     "from stats import compute_statistics\n",
-    "from utils import get_results_path"
+    "from utils import get_results_path\n"
    ]
   },
   {
@@ -21,11 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats_path = get_results_path() / \"statistics.csv\"\n",
-    "if stats_path.exists():\n",
-    "    df = pd.read_csv(stats_path, index_col=[0, 1])\n",
-    "else:\n",
-    "    df = pd.DataFrame()"
+    "stats_path = get_results_path() / \"statistics_real.csv\"\n",
+    "df = pd.DataFrame()\n"
    ]
   },
   {
@@ -36,16 +33,13 @@
    "source": [
     "# Get values for real datasets\n",
     "for name, dataset in iterate_datasets():\n",
-    "    if name in df.index.unique(level=0):\n",
-    "        continue\n",
-    "\n",
     "    print(f\"Processing {name}...\")\n",
     "    data = dataset[0]\n",
     "\n",
     "    A = to_scipy_sparse_matrix(data.edge_index)\n",
     "\n",
     "    df = compute_statistics(A, name, df, max_k=4)\n",
-    "    df.to_csv(stats_path)"
+    "    df.to_csv(stats_path)\n"
    ]
   },
   {
@@ -67,7 +61,7 @@
     "        \"4_mean\",\n",
     "        \"4_std\",\n",
     "    ]\n",
-    "]"
+    "]\n"
    ]
   }
  ],
