--- a/notebooks/table_1_and_2.ipynb
+++ b/notebooks/table_1_and_2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing p_ii=6/100, p_ij=3/100...\n",
+      "Processing p_ii=6/100, p_ij=6/100...\n",
+      "Processing p_ii=3/100, p_ij=6/100...\n",
+      "Processing p_ii=1/100, p_ij=9/100...\n"
+     ]
+    }
+   ],
    "source": [
     "# Get values for random graphs\n",
     "\n",
@@ -86,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,78 +144,78 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">p_ii=6/100, p_ij=3/100</th>\n",
        "      <th>True</th>\n",
-       "      <td>0.113076</td>\n",
-       "      <td>0.046143</td>\n",
-       "      <td>0.101329</td>\n",
-       "      <td>0.095121</td>\n",
-       "      <td>0.010718</td>\n",
-       "      <td>0.092278</td>\n",
+       "      <td>0.113581</td>\n",
+       "      <td>0.039070</td>\n",
+       "      <td>0.103199</td>\n",
+       "      <td>0.097186</td>\n",
+       "      <td>0.009861</td>\n",
+       "      <td>0.094278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.102750</td>\n",
-       "      <td>0.012392</td>\n",
-       "      <td>0.101659</td>\n",
+       "      <td>0.105467</td>\n",
+       "      <td>0.011502</td>\n",
+       "      <td>0.104092</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">p_ii=6/100, p_ij=6/100</th>\n",
        "      <th>True</th>\n",
-       "      <td>0.081962</td>\n",
-       "      <td>0.024870</td>\n",
-       "      <td>0.075942</td>\n",
-       "      <td>0.071819</td>\n",
-       "      <td>0.005457</td>\n",
-       "      <td>0.070614</td>\n",
+       "      <td>0.082454</td>\n",
+       "      <td>0.027257</td>\n",
+       "      <td>0.075988</td>\n",
+       "      <td>0.071834</td>\n",
+       "      <td>0.005354</td>\n",
+       "      <td>0.070589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.076469</td>\n",
-       "      <td>0.006172</td>\n",
-       "      <td>0.075979</td>\n",
+       "      <td>0.076419</td>\n",
+       "      <td>0.005828</td>\n",
+       "      <td>0.075951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">p_ii=3/100, p_ij=6/100</th>\n",
        "      <th>True</th>\n",
-       "      <td>0.109682</td>\n",
-       "      <td>0.036987</td>\n",
-       "      <td>0.099990</td>\n",
-       "      <td>0.094211</td>\n",
-       "      <td>0.009105</td>\n",
-       "      <td>0.091537</td>\n",
+       "      <td>0.111512</td>\n",
+       "      <td>0.040614</td>\n",
+       "      <td>0.101092</td>\n",
+       "      <td>0.095247</td>\n",
+       "      <td>0.009794</td>\n",
+       "      <td>0.092469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.102021</td>\n",
-       "      <td>0.010417</td>\n",
-       "      <td>0.100760</td>\n",
+       "      <td>0.103145</td>\n",
+       "      <td>0.011202</td>\n",
+       "      <td>0.101891</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">p_ii=1/100, p_ij=9/100</th>\n",
        "      <th>True</th>\n",
-       "      <td>0.100141</td>\n",
-       "      <td>0.032885</td>\n",
-       "      <td>0.091475</td>\n",
-       "      <td>0.086232</td>\n",
-       "      <td>0.008388</td>\n",
-       "      <td>0.083918</td>\n",
+       "      <td>0.101172</td>\n",
+       "      <td>0.037535</td>\n",
+       "      <td>0.091291</td>\n",
+       "      <td>0.085868</td>\n",
+       "      <td>0.009595</td>\n",
+       "      <td>0.083262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.092780</td>\n",
-       "      <td>0.009371</td>\n",
-       "      <td>0.091605</td>\n",
+       "      <td>0.092139</td>\n",
+       "      <td>0.010150</td>\n",
+       "      <td>0.090824</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -213,28 +224,28 @@
       "text/plain": [
        "                                     1_mean     1_std  1_expected    2_mean  \\\n",
        "Dataset                Self-loops                                             \n",
-       "p_ii=6/100, p_ij=3/100 True        0.113076  0.046143    0.101329  0.095121   \n",
-       "                       False       0.000000  0.000000    0.000000  0.102750   \n",
-       "p_ii=6/100, p_ij=6/100 True        0.081962  0.024870    0.075942  0.071819   \n",
-       "                       False       0.000000  0.000000    0.000000  0.076469   \n",
-       "p_ii=3/100, p_ij=6/100 True        0.109682  0.036987    0.099990  0.094211   \n",
-       "                       False       0.000000  0.000000    0.000000  0.102021   \n",
-       "p_ii=1/100, p_ij=9/100 True        0.100141  0.032885    0.091475  0.086232   \n",
-       "                       False       0.000000  0.000000    0.000000  0.092780   \n",
+       "p_ii=6/100, p_ij=3/100 True        0.113581  0.039070    0.103199  0.097186   \n",
+       "                       False       0.000000  0.000000    0.000000  0.105467   \n",
+       "p_ii=6/100, p_ij=6/100 True        0.082454  0.027257    0.075988  0.071834   \n",
+       "                       False       0.000000  0.000000    0.000000  0.076419   \n",
+       "p_ii=3/100, p_ij=6/100 True        0.111512  0.040614    0.101092  0.095247   \n",
+       "                       False       0.000000  0.000000    0.000000  0.103145   \n",
+       "p_ii=1/100, p_ij=9/100 True        0.101172  0.037535    0.091291  0.085868   \n",
+       "                       False       0.000000  0.000000    0.000000  0.092139   \n",
        "\n",
        "                                      2_std  2_expected  \n",
        "Dataset                Self-loops                        \n",
-       "p_ii=6/100, p_ij=3/100 True        0.010718    0.092278  \n",
-       "                       False       0.012392    0.101659  \n",
-       "p_ii=6/100, p_ij=6/100 True        0.005457    0.070614  \n",
-       "                       False       0.006172    0.075979  \n",
-       "p_ii=3/100, p_ij=6/100 True        0.009105    0.091537  \n",
-       "                       False       0.010417    0.100760  \n",
-       "p_ii=1/100, p_ij=9/100 True        0.008388    0.083918  \n",
-       "                       False       0.009371    0.091605  "
+       "p_ii=6/100, p_ij=3/100 True        0.009861    0.094278  \n",
+       "                       False       0.011502    0.104092  \n",
+       "p_ii=6/100, p_ij=6/100 True        0.005354    0.070589  \n",
+       "                       False       0.005828    0.075951  \n",
+       "p_ii=3/100, p_ij=6/100 True        0.009794    0.092469  \n",
+       "                       False       0.011202    0.101891  \n",
+       "p_ii=1/100, p_ij=9/100 True        0.009595    0.083262  \n",
+       "                       False       0.010150    0.090824  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -296,94 +307,94 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">p_ii=6/100, p_ij=3/100</th>\n",
        "      <th>True</th>\n",
-       "      <td>0.026572</td>\n",
-       "      <td>0.003723</td>\n",
-       "      <td>0.018963</td>\n",
-       "      <td>0.002708</td>\n",
-       "      <td>0.008560</td>\n",
-       "      <td>0.001732</td>\n",
-       "      <td>0.006008</td>\n",
-       "      <td>0.001524</td>\n",
+       "      <td>0.027360</td>\n",
+       "      <td>0.003468</td>\n",
+       "      <td>0.019599</td>\n",
+       "      <td>0.002653</td>\n",
+       "      <td>0.008849</td>\n",
+       "      <td>0.001741</td>\n",
+       "      <td>0.006231</td>\n",
+       "      <td>0.001572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
-       "      <td>0.002480</td>\n",
-       "      <td>0.002471</td>\n",
-       "      <td>0.020318</td>\n",
-       "      <td>0.003397</td>\n",
-       "      <td>0.002230</td>\n",
-       "      <td>0.001295</td>\n",
-       "      <td>0.006021</td>\n",
-       "      <td>0.001628</td>\n",
+       "      <td>0.002184</td>\n",
+       "      <td>0.002464</td>\n",
+       "      <td>0.021124</td>\n",
+       "      <td>0.003415</td>\n",
+       "      <td>0.002124</td>\n",
+       "      <td>0.001319</td>\n",
+       "      <td>0.006307</td>\n",
+       "      <td>0.001712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">p_ii=6/100, p_ij=6/100</th>\n",
        "      <th>True</th>\n",
-       "      <td>0.015522</td>\n",
-       "      <td>0.001438</td>\n",
-       "      <td>0.010998</td>\n",
-       "      <td>0.001345</td>\n",
-       "      <td>0.004181</td>\n",
-       "      <td>0.000745</td>\n",
-       "      <td>0.002945</td>\n",
-       "      <td>0.000675</td>\n",
+       "      <td>0.015532</td>\n",
+       "      <td>0.001409</td>\n",
+       "      <td>0.010986</td>\n",
+       "      <td>0.001377</td>\n",
+       "      <td>0.004180</td>\n",
+       "      <td>0.000759</td>\n",
+       "      <td>0.002940</td>\n",
+       "      <td>0.000678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
-       "      <td>0.001288</td>\n",
-       "      <td>0.001205</td>\n",
-       "      <td>0.011642</td>\n",
-       "      <td>0.001664</td>\n",
-       "      <td>0.001206</td>\n",
-       "      <td>0.000530</td>\n",
-       "      <td>0.002965</td>\n",
-       "      <td>0.000722</td>\n",
+       "      <td>0.001318</td>\n",
+       "      <td>0.001211</td>\n",
+       "      <td>0.011620</td>\n",
+       "      <td>0.001694</td>\n",
+       "      <td>0.001212</td>\n",
+       "      <td>0.000523</td>\n",
+       "      <td>0.002956</td>\n",
+       "      <td>0.000723</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">p_ii=3/100, p_ij=6/100</th>\n",
        "      <th>True</th>\n",
-       "      <td>0.024829</td>\n",
-       "      <td>0.002786</td>\n",
-       "      <td>0.017524</td>\n",
-       "      <td>0.002066</td>\n",
-       "      <td>0.007190</td>\n",
-       "      <td>0.001110</td>\n",
-       "      <td>0.004904</td>\n",
-       "      <td>0.001051</td>\n",
+       "      <td>0.025371</td>\n",
+       "      <td>0.003072</td>\n",
+       "      <td>0.017949</td>\n",
+       "      <td>0.002173</td>\n",
+       "      <td>0.007409</td>\n",
+       "      <td>0.001138</td>\n",
+       "      <td>0.005055</td>\n",
+       "      <td>0.001064</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
-       "      <td>0.000788</td>\n",
-       "      <td>0.001318</td>\n",
-       "      <td>0.019002</td>\n",
-       "      <td>0.002830</td>\n",
-       "      <td>0.000956</td>\n",
+       "      <td>0.000786</td>\n",
+       "      <td>0.001349</td>\n",
+       "      <td>0.019494</td>\n",
+       "      <td>0.002957</td>\n",
+       "      <td>0.000953</td>\n",
        "      <td>0.000594</td>\n",
-       "      <td>0.005092</td>\n",
-       "      <td>0.001260</td>\n",
+       "      <td>0.005258</td>\n",
+       "      <td>0.001281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">p_ii=1/100, p_ij=9/100</th>\n",
        "      <th>True</th>\n",
-       "      <td>0.021038</td>\n",
-       "      <td>0.002454</td>\n",
-       "      <td>0.014793</td>\n",
-       "      <td>0.001780</td>\n",
-       "      <td>0.005784</td>\n",
-       "      <td>0.000926</td>\n",
-       "      <td>0.003968</td>\n",
-       "      <td>0.000881</td>\n",
+       "      <td>0.020803</td>\n",
+       "      <td>0.002736</td>\n",
+       "      <td>0.014562</td>\n",
+       "      <td>0.001799</td>\n",
+       "      <td>0.005671</td>\n",
+       "      <td>0.000922</td>\n",
+       "      <td>0.003887</td>\n",
+       "      <td>0.000878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
-       "      <td>0.000746</td>\n",
-       "      <td>0.001177</td>\n",
-       "      <td>0.015925</td>\n",
-       "      <td>0.002363</td>\n",
-       "      <td>0.000923</td>\n",
-       "      <td>0.000519</td>\n",
-       "      <td>0.004103</td>\n",
-       "      <td>0.001028</td>\n",
+       "      <td>0.000724</td>\n",
+       "      <td>0.001146</td>\n",
+       "      <td>0.015650</td>\n",
+       "      <td>0.002387</td>\n",
+       "      <td>0.000924</td>\n",
+       "      <td>0.000516</td>\n",
+       "      <td>0.004012</td>\n",
+       "      <td>0.001022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -392,28 +403,28 @@
       "text/plain": [
        "                                     3_mean     3_std    4_mean     4_std  \\\n",
        "Dataset                Self-loops                                           \n",
-       "p_ii=6/100, p_ij=3/100 True        0.026572  0.003723  0.018963  0.002708   \n",
-       "                       False       0.002480  0.002471  0.020318  0.003397   \n",
-       "p_ii=6/100, p_ij=6/100 True        0.015522  0.001438  0.010998  0.001345   \n",
-       "                       False       0.001288  0.001205  0.011642  0.001664   \n",
-       "p_ii=3/100, p_ij=6/100 True        0.024829  0.002786  0.017524  0.002066   \n",
-       "                       False       0.000788  0.001318  0.019002  0.002830   \n",
-       "p_ii=1/100, p_ij=9/100 True        0.021038  0.002454  0.014793  0.001780   \n",
-       "                       False       0.000746  0.001177  0.015925  0.002363   \n",
+       "p_ii=6/100, p_ij=3/100 True        0.027360  0.003468  0.019599  0.002653   \n",
+       "                       False       0.002184  0.002464  0.021124  0.003415   \n",
+       "p_ii=6/100, p_ij=6/100 True        0.015532  0.001409  0.010986  0.001377   \n",
+       "                       False       0.001318  0.001211  0.011620  0.001694   \n",
+       "p_ii=3/100, p_ij=6/100 True        0.025371  0.003072  0.017949  0.002173   \n",
+       "                       False       0.000786  0.001349  0.019494  0.002957   \n",
+       "p_ii=1/100, p_ij=9/100 True        0.020803  0.002736  0.014562  0.001799   \n",
+       "                       False       0.000724  0.001146  0.015650  0.002387   \n",
        "\n",
        "                                     5_mean     5_std    6_mean     6_std  \n",
        "Dataset                Self-loops                                          \n",
-       "p_ii=6/100, p_ij=3/100 True        0.008560  0.001732  0.006008  0.001524  \n",
-       "                       False       0.002230  0.001295  0.006021  0.001628  \n",
-       "p_ii=6/100, p_ij=6/100 True        0.004181  0.000745  0.002945  0.000675  \n",
-       "                       False       0.001206  0.000530  0.002965  0.000722  \n",
-       "p_ii=3/100, p_ij=6/100 True        0.007190  0.001110  0.004904  0.001051  \n",
-       "                       False       0.000956  0.000594  0.005092  0.001260  \n",
-       "p_ii=1/100, p_ij=9/100 True        0.005784  0.000926  0.003968  0.000881  \n",
-       "                       False       0.000923  0.000519  0.004103  0.001028  "
+       "p_ii=6/100, p_ij=3/100 True        0.008849  0.001741  0.006231  0.001572  \n",
+       "                       False       0.002124  0.001319  0.006307  0.001712  \n",
+       "p_ii=6/100, p_ij=6/100 True        0.004180  0.000759  0.002940  0.000678  \n",
+       "                       False       0.001212  0.000523  0.002956  0.000723  \n",
+       "p_ii=3/100, p_ij=6/100 True        0.007409  0.001138  0.005055  0.001064  \n",
+       "                       False       0.000953  0.000594  0.005258  0.001281  \n",
+       "p_ii=1/100, p_ij=9/100 True        0.005671  0.000922  0.003887  0.000878  \n",
+       "                       False       0.000924  0.000516  0.004012  0.001022  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
